--- a/personalwebsite.html
+++ b/personalwebsite.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./styles/responsive.css">
   <link rel="stylesheet" href="./styles/grid.css">
   <link rel="icon" type="image/png" sizes="60x60" href="./images/favicon-96x96.png">
   
@@ -50,9 +51,9 @@
             </li>
           </ul>
        
-        <!-- <div class="nav__btn">
+        <div class="nav__btn">
           <div class="nav__btn-line"></div>
-        </div> -->
+        </div>
 
       </nav>
 
