--- a/personalwebsite.html
+++ b/personalwebsite.html
@@ -17,7 +17,6 @@
 
   <header class="header">
     <div class="container">
-
       <nav class="nav">
 
         <h1 class="nav__text">FD.</h1>
@@ -56,14 +55,30 @@
         </div>
 
       </nav>
-
     </div>
     <div class="nav__mobile">
-
     </div>
   </header>
   <div class="cover"></div>
+  <section class="head">
+    <div class="container">
+      <div class="main">
 
+        <div class="main__left">
+          <h4 class="main__left--text">Hello,<span class="color-text"> Im Ali Rabiee</span></h4>
+          <h2 class="main__left--title">Frantend Developer.</h2>
+          <p class="main__left--discription">Freelancer Web/Mobile Ui/Ux Designer whith motion Grafiphist</p>
+          <div class="main__left--btn">
+            <button class="main__left--btnlt">Hiro mo</button>
+            <button class="main__left--btnrt">Get resome</button>
+          </div>
+        </div>
+        <div class="main__right">
+          <img class="main__right--img" src="./images/pic.jpg" alt="">
+        </div>
+      </div>
+    </div>
+  </section>
 
   <script src="./scripts/app.js"></script>
 </body>
