--- a/personalwebsite.html
+++ b/personalwebsite.html
@@ -62,22 +62,32 @@
   <div class="cover"></div>
   <section class="head">
     <div class="container">
-      <div class="main">
-
-        <div class="main__left">
-          <h4 class="main__left--text">Hello,<span class="color-text"> Im Ali Rabiee</span></h4>
-          <h2 class="main__left--title">Frantend Developer.</h2>
-          <p class="main__left--discription">Freelancer Web/Mobile Ui/Ux Designer whith motion Grafiphist</p>
-          <div class="main__left--btn">
-            <button class="main__left--btnlt">Hiro mo</button>
-            <button class="main__left--btnrt">Get resome</button>
+      <div class="row">
+        <div class="col-6 col-ms-12">
+          <div class="main__left">
+            <h4 class="main__left--text">Hello,<span class="color-text"> Im Ali Rabiee</span></h4>
+            <h2 class="main__left--title">Frantend Developer.</h2>
+            <p class="main__left--discription">Freelancer Web/Mobile Ui/Ux Designer whith motion Grafiphist</p>
+            <div class="main__left--btn">
+              <a class="main__left--btnlt">Hiro mo</a>
+              <a class="main__left--btnrt">Get resome</a>
+            </div>
           </div>
         </div>
-        <div class="main__right">
-          <img class="main__right--img" src="./images/pic.jpg" alt="">
+        <div class="col-6 col-ms-12">
+          <div class="main__right">
+            <img class="main__right--img" src="./images/pic.jpg" alt="">
+          </div>
         </div>
+
       </div>
     </div>
+    <svg class="head__shape" xmlns="http://www.w3.org/2000/svg" width="110%" height="361.824"
+      viewBox="0 0 2165.237 361.824">
+      <path id="Shape"
+        d="M-27.061,842.561s136.212,230.682,399.849,188.94,252.483-137.226,544.85-30.757,358.107,28.729,547.046-37.349,358.107,118.637,576.45,8.788,0,232.2,0,232.2L36.82,1201.005Z"
+        transform="translate(27.061 -842.561)" fill="#0cbfae" />
+    </svg>
   </section>
 
   <script src="./scripts/app.js"></script>
